--- a/CSS/component-set.css
+++ b/CSS/component-set.css
@@ -1,8 +1,11 @@
 *{
     font-family: "Yu Gothic UI";
     color: #401202;
-    font-size: 18px;
     scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-decoration: none;
 }
 
 h1, h2, h3, h4, h5{
@@ -10,12 +13,16 @@ h1, h2, h3, h4, h5{
     color: #60222B;;
 }
 
-p{
-    font-family: "微軟正黑";
+p, li{
     line-height: 180%;
     margin: 0;
+    font-size: 18px;
 }
-
+@media screen and (max-width: 768px){
+    p, li{
+        font-size: 16px;
+    }
+}
 .pic img{
     border-radius: 25px;
     vertical-align: middle;
@@ -62,39 +69,111 @@ span.inform{
     right: 0;
 }
 
+.banner{
+    margin: auto;
+    width: 100%;
+    background-size: cover;
+}
+@media screen and (max-width: 768px) {
+    .banner{
+        height: 320px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .banner{
+        height: 420px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .banner{
+        height: 555px;
+    }
+}
 
 .head-bg{
     width: 100%;
+    height: 100%;
     margin: auto;
-    height: 450px;
     background-image: url("../images/head-bg.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     position: absolute;
-    top: 278px;
+    z-index:0;
 }
 .head-bg h1{
-    font-size: 52px;
-    margin-top: 76px;
     text-align: center;
-
+}
+@media screen and (max-width: 768px) {
+    .head-bg{
+        top: 180px;
+    }
+    .head-bg h1{
+        font-size: 36px;
+        margin-top: 4rem;
+    }
+}
+@media screen and (min-width: 769px) {
+    .head-bg{
+        top: 200px;
+    }
+    .head-bg h1{
+        font-size: 48px;
+        margin-top: 8rem;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .head-bg{
+        top: 278px;
+    }
+    .head-bg h1{
+        margin-top: 10rem;
+    }
 }
 
 .wrap{
     height: 100%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
     margin: auto;
-    max-width: 1200px;
     background-color: #E9E5DA;
-    border-radius: 25px 25px 0 0;
     position: relative;
+}
+@media screen and (max-width: 768px) {
+    .wrap{
+        max-width: 92%;
+        border-radius: 15px 15px 0 0;
+    }
+}
+@media screen and (min-width: 769px) {
+    .wrap{
+        max-width: 92%;
+        border-radius: 25px 25px 0 0;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .wrap{
+        max-width: 1200px;
+    }
 }
 
 
-.wrap-item{
-    padding: 40px 92px 130px 92px;
+
+@media screen and (max-width: 768px) {
+    .wrap-item{
+        padding: 4rem 2.25rem 4.5rem 2.25rem;
+    }
+}
+@media screen and (min-width: 769px) {
+    .wrap-item{
+        padding: 4rem 4rem 4.5rem 4rem;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .wrap-item{
+        padding: 2.5rem 6rem 7.5rem 6rem;
+    }
 }
 
 .to-top{
@@ -108,21 +187,28 @@ span.inform{
 .close{
     display: none;
 }
-.media{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    top: 400px;
-    left: 2%;
 
+@media screen and (max-width: 768px) {
+    .media{
+        display: none;
+    }
+}
+@media screen and (min-width: 769px) {
+    .media{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        top: 400px;
+        left: 2%;
+    }
+    .media a i{
+        font-size: 48px;
+        margin: 19px 0;
+        color: #F0F1F3;
+    }
+    .media a i.change-color{
+        color: #401202;
+    }
 }
 
-.media a i{
-    font-size: 48px;
-    margin: 19px 0;
-    color: #F0F1F3;
-}
-.media a i.change-color{
-    color: #401202;
-}
