--- a/CSS/nav-footer.css
+++ b/CSS/nav-footer.css
@@ -1,97 +1,184 @@
+@media screen and (max-width: 768px) {
+    header{
+        display: none;
+    }
+    nav{
+        position: fixed;
+        z-index: 2;
+        width: 100%;
+        box-sizing: border-box;
+        background-color: #E9E5DA;
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 1rem;
+    }
+    nav .logo{
+        position: absolute;
+        z-index: 3;
+        left: 1rem;
+        background-color: #401202;
+        border-radius: 0 0 15px 15px;
+        padding: 20px 9px;
+    }
+    nav .logo img{
+        width: 100%;
+        vertical-align: middle;
+    }
+    .nav-icons ul{
+        display: flex;  
+    }
+    .nav-icons ul li{
+        display: flex;  
+        padding: 1rem;
+    }
+    .nav-icons ul i{
+        font-size: 24px;
+    }
+    
+}
+@media screen and (min-width: 769px){
+    header{
+        display: flex;
+        width: 100%;
+        position: fixed;
+        z-index: 3;
+    }
+    .logo{
+        text-align: center;
+        position: absolute;
+        z-index: 2;
+        left: 2rem;
+        background-color: #401202;
+        border-radius: 0 0 25px 25px;
+        padding: 20px 0px;
+    }
+    .logo img{
+        width: 90%;
+        vertical-align: middle;
+        text-align: center;
+    }
+    
+    .nav-bg{
+        width: 100%;
+        background-color: #E9E5DA;
+    }
+    .select-area{
+        width: 100%;
+        margin: auto; 
+    }
+    .select-area ul{
+        display: flex;
+        justify-content: end;   
+        margin: 0 1rem;
+    }
+    .select-area ul a{
+        text-decoration: none;
+        line-height: 5rem;
+        font-weight: bold ;
+        padding: 0.8rem;
+    }
+    .select-area ul a i{
+        font-size: 21px;
+    }
 
-.nav{
-    display: flex;
-    width: 100%;
-    position: fixed;
-    z-index: 3;
-}
-.logo{
-    position: absolute;
-    z-index: 2;
-    left: 100px;
-    background-color: #401202;
-    border-radius: 0 0 25px 25px;
-    padding: 20px 9px;
-}
-.logo img{
-    width: 100%;
-    vertical-align: middle;
-}
-
-.nav-bg{
-    width: 100%;
-    background-color: #E9E5DA;
-}
-.select-area{
-    max-width: 1200px;
-    margin: auto; 
-}
-.select-area ul{
-    display: flex;
-    justify-content: end;
-    list-style: none;
-    margin: 0;
-    margin-right: -25px;
-
-}
-.select-area ul li{
-    padding: 5px 0;
-}
-
-.select-area ul a{
-    text-decoration: none;
-    line-height: 70px;
-    font-weight: bold ;
-    font-size: 18px;
-    padding: 25px 25px;
-}
-.select-area ul a i{
-    font-size: 24px;
+    nav{
+        display: none;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .logo{
+        left: 6rem;
+        padding: 20px 9px;
+    }
+    .logo img{
+        width: 100%;
+        vertical-align: middle;
+    }
+    .select-area{
+        max-width: 1200px;
+        width: 100%;
+        margin: auto; 
+    }
+    .select-area ul a{
+        padding: 1.5rem;
+    }
 }
 
 
-.footer{
+footer{
     background-color: #E9E5DA;
     position: relative;
 }
-.footer-area{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: auto;
-    max-width: 1200px;
-    padding: 15px 0;
-}
-.footer .foot-logo img{
+.foot-logo img{
     width: 100%;
     vertical-align: middle;
 }
-.foot-select{
-    padding-top: 28px;
-}
-.foot-select ul{
-    display: flex;
-    justify-content: end;
-    list-style: none;
-    margin: 0;
-    margin-right: -25px;
-}
-
-.foot-select ul a{
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold ;
-    line-height: 70px;
-    padding: 35px 25px;
-}
-.footer .copyright{
+footer .copyright{
     height: 48px;
     background-color: #401202;
 }
-.footer .copyright p{
-    font-size: 16px;
+footer .copyright p{
+    font-size: 14px;
     line-height: 3;
     color: #F0F1F3;
     text-align: center ;
 }
+@media screen and (max-width: 768px) {
+    .footer-area{
+        display: none;
+    }
+    .mobile-footer{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 1rem;
+        padding: 0.5rem 0;
+    }
+    footer .social-media{
+        display: flex;
+    }
+    footer .social-media a{
+        padding: 1rem;
+    }
+    footer .social-media a i{
+        font-size: 28px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .footer-area{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: auto;
+        max-width: 1200px;
+        padding: 0.5rem 0;
+    }
+    .foot-select{
+        padding-top: 1.75rem;
+    }
+    .foot-select ul{
+        display: flex;
+        justify-content: end;
+        margin: 0;
+    }    
+    .foot-select ul a{
+        font-weight: bold ;
+        line-height: 70px;
+        padding: 2.25rem 1rem;
+    }
+    footer .mobile-footer{
+        display: none;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .footer-area{
+        max-width: 1200px;
+    }
+    .foot-select ul a{
+        padding: 2.25rem 1.5rem;
+    }
+
+}
+
 
