--- a/CSS/qna-style.css
+++ b/CSS/qna-style.css
@@ -1,56 +1,97 @@
 .banner{
-    height: 555px;
-    margin: auto;
-    width: 100%;
-    background-size: cover;
     background-image: url("../images/qna/qna-banner.png");
 }
-.bread-crumbs ul{
-    padding-bottom: 89px;
-    padding-left: 0;
+@media screen and (max-width: 768px) {
+    .bread-crumbs ul{
+        display: none;
+    }
 }
-.bread-crumbs ul{
-    display: flex;
-    list-style: none;
-}
-.bread-crumbs li + li{
-    padding: 0 5px
-}
-.bread-crumbs li + li::before{
-    content: '/';
-    padding: 10px;
-}
-.bread-crumbs a{
-    text-decoration: none;
+@media screen and (min-width: 769px) {
+    .bread-crumbs ul{
+        padding-bottom: 4rem;
+        padding-left: 0;
+    }
+    .bread-crumbs ul{
+        display: flex;
+        list-style: none;
+        margin: 0;
+    }
+    .bread-crumbs li + li{
+        padding: 0 5px
+    }
+    .bread-crumbs li + li::before{
+        content: '/';
+        padding: 10px;
+    }
+    .bread-crumbs a{
+        text-decoration: none;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .bread-crumbs ul{
+        padding-bottom: 6rem;
+    }
 }
 
 .item{
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
-    padding: 15px 0px;
+    padding: 1rem 0px;
+}
+@media screen and (max-width: 768px) {
+    .item{
+        width: 80vw;
+    }
+}
+@media screen and (min-width: 769px) {
+    .item{
+        width: 80vw;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .item{
+        width: 90vw;
+    }
 }
 .question{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0 40px;
+    
     border: #60222B 2px solid;
     border-radius: 50px;
     align-items: center;
 }
-.question h5{
-    color: #60222B;
-    font-size: 24px;
-    line-height: 66px;
-    margin: 0;
+@media screen and (max-width: 768px) {
+    .question{
+        padding: 0 1.5rem;
+    }
+    .question h5{
+        font-size: 21px;
+        line-height: 3rem;
+    }
+    .question i{
+        font-size: 21px;
+        font-weight: bold;
+    }
 }
-.question i{
-    font-size: 24px;
-    font-weight: bold;
-}
+@media screen and (min-width: 769px) {
+    .question{
+        padding: 0 3rem;
+    }
+    .question h5{
+        font-size: 24px;
+        line-height: 4rem;
+    }
+    .question i{
+        font-size: 24px;
+        font-weight: bold;
+    }
+}   
+
 .answer{
-    margin: 0 30px;
-    padding: 30px 40px;
+    margin: 0 2rem;
+    padding: 2rem 2.5rem;
     background-color: #F0F1F3;
     border-radius: 0 0 25px 25px;
     display: none;
@@ -58,6 +99,19 @@
 .answer p span{
     font-weight: 450;
 }
+@media screen and (max-width: 768px) {
+    .answer{
+        margin: 0 1.75  rem;
+        padding: 1.5rem 2rem;
+    }
+    
+}
+@media screen and (min-width: 769px) {
+    .answer{
+        margin: 0 2rem;
+        padding: 2rem 2.5rem;
+    }
+} 
 
 label.q-1 i.fa-plus{
     display: none;
@@ -75,3 +129,4 @@ input#question-1[type="checkbox"] {
 #question-1:checked ~.question label.q-1 i.fa-minus{
     display: none;
 }
+    
