--- a/CSS/news-style.css
+++ b/CSS/news-style.css
@@ -7,23 +7,38 @@
 
 }
 
-.bread-crumbs ul{
-    padding-bottom: 89px;
-    padding-left: 0;
+
+@media screen and (max-width: 768px) {
+    .bread-crumbs ul{
+        display: none;
+    }
 }
-.bread-crumbs ul{
-    display: flex;
-    list-style: none;
-}
-.bread-crumbs li + li{
-    padding: 0 5px
-}
-.bread-crumbs li + li::before{
-    content: '/';
-    padding: 10px;
-}
-.bread-crumbs a{
-    text-decoration: none;
+@media screen and (min-width: 769px) {
+    .bread-crumbs ul{
+        padding-bottom: 4rem;
+        padding-left: 0;
+    }
+    .bread-crumbs ul{
+        display: flex;
+        list-style: none;
+        margin: 0;
+    }
+    .bread-crumbs li + li{
+        display: flex;
+        padding: 0 5px
+    }
+    .bread-crumbs li + li::before{
+        content: '/';
+        padding: 0 10px;
+    }
+    .bread-crumbs a{
+        text-decoration: none;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .bread-crumbs ul{
+        padding-bottom: 6rem;
+    }
 }
 
 .illus{
@@ -33,22 +48,42 @@
     url(../images/bread-illus/bread-1.png) ;
 
     background-repeat: no-repeat, no-repeat, no-repeat ;
-    background-position:
-    top 30% left,
-    bottom 45px right 20% ,
-    bottom 45px left 20%;
     background-size: 15%;
 }
+@media screen and (max-width: 768px) {
+    .illus{
+        background-position:
+        top 1% left 0,
+        bottom 60px right 5% ,
+        bottom 60px left 5%;
+    }
+}
+@media screen and (min-width: 769px) {
+    .illus{
+        background-position:
+        top 25% left 0,
+        bottom 45px right 15% ,
+        bottom 45px left 15%;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .illus{
+        background-position:
+        top 30% left,
+        bottom 45px right 20% ,
+        bottom 45px left 20%;
+    }
+}   
+
+
 .top-news{
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    margin-bottom: 94px;
+    margin-bottom: 6rem;
     justify-content: space-between;
 }
-
 .top-news .news-info{
-    width: 36%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -61,84 +96,119 @@
 .top-news .pic{
     width: 60%;
     margin-top: auto;
+    box-sizing: border-box;
 }
-.card .pic img{
-    border-radius: 25px 25px 0 0 ;
+.top-news .pic img{
+    vertical-align: middle;
 }
 .tag{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 10px 0;
+    padding: 0.75rem 0;
 }
 .tag .time{
     align-self: center;
 }
-
 .top-news .news-info .text p{
     font-size: 21px;
     margin: 0;
-
 }
 .news-info .text{
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     overflow: hidden;
 }
-
-
-a.more-btn{
-    align-self: flex-end;
-    justify-self: flex-end;
-    text-decoration: none;
-    font-size: 24px;
+.more-btn{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;  
+    justify-content: flex-end;
+    margin-top: 1rem;
+}
+.more-btn a{
     font-weight: bold;
-    padding: 10px 75px;
-    border-radius: 40px;
+    border-radius: 50px;
     border: 3px solid;
-    margin-top: 20px;
     color: #60222B;
-    border-color: #60222B;
+    border-color: #60222B;    
+    text-align: center;
+    padding: 0.75rem;
+}
+@media screen and (max-width: 768px) {
+    .top-news{
+        display: none;
+    }
+}
+@media screen and (min-width: 769px) {
+    .top-news{
+        margin-bottom: 4rem;
+    }
+    .top-news .news-info{
+        width: 40%;
+    }
+    .top-news .pic{
+        padding-left: 2rem;
+    }
+    .top-news img.lg{
+        display: none;
+    }
+    .top-news img.md{
+        display: block;
+    }
+    .more-btn a{
+        font-size: 21px;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .top-news{
+        margin-bottom: 6rem;
+    }
+    .top-news .news-info{
+        width: 36%;
+    }
+    .top-news img.lg{
+        display: block;
+    }
+    .top-news img.md{
+        display: none;
+    }
+    .more-btn a{
+        font-size: 24px;
+    }
 }
 
-a{
-    text-decoration: none;
+
+.card .pic img{
+    border-radius: 25px 25px 0 0 ;
 }
 a .card{
-    /* height: 100%; */
-    margin: 6px 7px;
     background-color: #F0F1F3;
     border-radius: 25px;
     height: 100%;
     display: flex;
     flex-direction: column;
 } 
-
 .card .samepic{
     position: relative;
 
 }
 .card .samepic span{
     position: absolute;
-    top:120px;
-    left: 75px;
-    font-size: 24px;
     font-weight: bold;
     color: #60222B;
 }
-
 a .card .news-info{
-    padding: 25px;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
 }
-
 a .news-info h5.title{
     font-size: 24px;
-    margin: 0;
-    margin-bottom: 10px ;
+    line-height: 120%;
+    margin-bottom: 0.75rem ;
     flex-grow: 1;
 }
 a .news-info p.text{
@@ -150,33 +220,79 @@ a .news-info p.text{
     overflow: hidden;
 }
 a .news-info .tag-time{
-    padding-top: 35px;
+    padding-top: 2rem;
     padding-bottom: 0;
 }
+@media screen and (max-width: 768px) {
+    a:first-child{
+        display: block;
+    }
+    a:last-child{
+        display: none;
+    }
+    .card .samepic span{ 
+        top: 60%;
+        left: 26%;
+        font-size: 24px;
+    }
+}
+@media screen and (min-width: 769px) {
+    a:first-child{
+        display: none;
+    }
+    a:last-child{
+        display: block;
+    }
+    .card .samepic span{ 
+        top: 60%;
+        left: 30%;
+        font-size: 24px;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .card .samepic span{ 
+        left: 25%;
+    }
+}
+
 
 .pages{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 5rem;
 }
-
 .pages a{    
     align-self: center;
-    padding: 8px 15px;
-    margin: 12px;
-    font-size: 21px;
     font-weight: bold;
     display: inline-block;
     text-decoration: none;
     border: #60222B 2px solid;
     color: #60222B;
     border-radius: 50%;
-
 }
-
 .pages a.current{
     background-color: #60222B;
     color: #F0F1F3;
     overflow: hidden;
 }
+@media screen and (max-width: 768px) {
+    .pages{
+        margin-top: 4rem;
+    }
+    .pages a{    
+        padding: 0.5rem 1rem;
+        margin: 0.5rem;
+        font-size: 21px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .pages{
+        margin-top: 5rem;
+    }
+    .pages a{    
+        padding: 0.5rem 1rem;
+        margin: 0.75rem;
+        font-size: 21px;
+    }
+}   
