--- a/CSS/newsdetail-style.css
+++ b/CSS/newsdetail-style.css
@@ -1,41 +1,53 @@
 .banner{
-    height: 555px;
-    margin: auto;
-    width: 100%;
-    background-size: cover;
     background-image: url("../images/new-detail/news-detail-banner.jpg");
 }
-.bread-crumbs ul{
-    padding-bottom: 89px;
-    padding-left: 0;
+
+@media screen and (max-width: 768px) {
+    .bread-crumbs ul{
+        display: none;
+    }
 }
-.bread-crumbs ul{
-    display: flex;
-    list-style: none;
+@media screen and (min-width: 769px) {
+    .bread-crumbs ul{
+        padding-bottom: 4rem;
+        padding-left: 0;
+    }
+    .bread-crumbs ul{
+        display: flex;
+        list-style: none;
+    }
+    .bread-crumbs li + li{
+        padding: 0 5px
+    }
+    .bread-crumbs li::after{
+        content: '/';
+        padding: 10px;
+    }
+    .bread-crumbs a{
+        text-decoration: none;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .bread-crumbs ul{
+        padding-bottom: 6rem;
+    }
 }
-.bread-crumbs li + li{
-    padding: 0 5px
+
+.illus{
+    background-image: url(../images/bread-illus/bread-1.png) ,
+    url(../images/bread-illus/bread-2.png) ,
+    url(../images/bread-illus/bread-4.png) ,
+    url(../images/bread-illus/bread-6.png);
+
+    background-repeat: no-repeat, no-repeat, no-repeat ,no-repeat;
+    background-position:
+    top right 4rem,
+    top 35% left,
+    bottom 30% right ,
+    bottom 30px left 10px;
+    background-size: 15%;
 }
-.bread-crumbs li::after{
-    content: '/';
-    padding: 10px;
-}
-.bread-crumbs a{
-    text-decoration: none;
-}
-.bread-pic-1{
-    position: absolute;
-    left: 100px;
-    bottom: -30px;
-}
-.bread-pic-1 img{
-    width: 30%;
-}
-.bread-pic-2{
-    position: absolute;
-    right: 240px;
-    top:0;
-}
+
 .news-article{
     width: 83%;
     margin: auto;
@@ -44,41 +56,55 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px 0 ;
+    padding: 1.25rem 0 ;
 }
-.news-article .pic{
-    position: relative;
-}
-.bread-pic-3{
-    position: absolute;
-    left: -160px;
-    top: 120px;
-}
-.pic .bread-pic-3 img{
-    width: 70%;
+.up-info .time{
+    align-self: flex-end;
+    padding-top: 1rem;
 }
 .title h2{
     font-size: 42px;
 }
-.news-article .text{
-    margin-top: 60px;
-    position: relative;
-}
-.text .bread-pic-4{
-    position: absolute;
-    right: -160px;
-    top: 160px;
-}
-.bread-pic-4 img{
-    width: 60%;
-}
 .text ul li{
-    font-size: 21px;
     line-height: 180%;
 }
 .text p{
-    font-size: 21px;
     line-height: 180%;
-    padding: 19px 0;
+    padding: 1.25rem 0;
+}
+@media screen and (max-width: 768px) {
+    .title h2{
+        font-size: 32px;
+    }
+    .news-article .text{
+        margin-top: 2rem;
+    }
+    .text ul li{
+        font-size: 18px;
+    }
+    .text p{
+        font-size: 18px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .title h2{
+        font-size: 36spx;
+    }
+    .news-article .text{
+        margin-top: 3rem;
+    }
+    .text ul li{
+        font-size: 21px;
+    }
+    .text p{
+        font-size: 21px;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .title h2{
+        font-size: 42px;
+    }
+    .news-article .text{
+        margin-top: 3.75rem;
+    }
 }
