--- a/CSS/productsdetail-style.css
+++ b/CSS/productsdetail-style.css
@@ -1,96 +1,157 @@
 .banner{
-    height: 555px;
-    margin: auto;
-    width: 100%;
-    background-size: cover;
     background-image: url("../images/product-detail/products-detail-banner.png");
 }
-.bread-crumbs ul{
-    padding-bottom: 89px;
+
+@media screen and (max-width: 768px) {
+    .bread-crumbs ul{
+        display: none;
+    }
 }
-.bread-crumbs ul{
-    display: flex;
-    list-style: none;
-}
-.bread-crumbs li + li{
-    padding: 0 5px
-}
-.bread-crumbs li::after{
-    content: '/';
-    padding: 10px;
-}
-.bread-crumbs a{
-    text-decoration: none;
+@media screen and (min-width: 769px) {
+    .bread-crumbs ul{
+        padding-bottom: 4rem;
+        padding-left: 0;
+    }
+    .bread-crumbs ul{
+        display: flex;
+        list-style: none;
+    }
+    .bread-crumbs li + li{
+        padding: 0 5px
+    }
+    .bread-crumbs li::after{
+        content: '/';
+        padding: 10px;
+    }
+    .bread-crumbs a{
+        text-decoration: none;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .bread-crumbs ul{
+        padding-bottom: 6rem;
+    }
 }
 
-.bread-pic-1{
-    position: absolute;
-    left: 40px;
-    bottom: -30px;
-}
-.bread-pic-1 img{
-    width: 50%;
-}
-.bread-pic-2{
-    position: absolute;
-    right: 120px;
-    top: 80px;
-}
 
-.order-section{
-    display: flex;
-    flex-wrap: wrap;
-}
-.order-section .pic{
-    width: 52%;
-}
-.order-section .sm-pic-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-top: 20px;
-}
+@media screen and (max-width: 768px) {
+    .order-section .sm-pic-list{
+        display: none;
+    }
+    /* .lg-pic {
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        width: 60%;
+        height: 600px;
+        margin: 100px auto;
+        
+        overflow: hidden; 
+    }
+    
+    .lg-pic #lg-pic-list {
+        position: relative;
+    }
+    
+    .lg-pic #lg-pic-list li {
+        float: left;
+    }
+    
+    .lg-pic #lg-pic-list img {
+        width: 100%;
+        height: 550px;
 
-.order-section .buy{
-    width: calc(48% - 60px);
-    margin-left: 60px;
-    padding-top: 100px;
-    position: relative;
+    } */
+    
+/* 
+    span#pic-number{
+        position: absolute;
+        right: 4rem;
+        bottom: 2rem;
+        background-color: #9F9393;
+        font-size: 18px;
+        font-weight: bold;
+        color: #F0F1F3;
+        padding: 0.5rem 1rem;
+        border-radius: 50px;
+    }
+    .move-icon{
+        position: relative;
+        width: 100%;
+        top: 45%;
+    }
+    a#prev{
+        position: absolute;
+        left: 0rem;
+    }
+    a#next{
+        position: absolute;
+        right: 0rem;
+    }
+    #contentButton{
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        height: 3rem;
+        width: 100%;
+    } 
+    #contentButton li{
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+    
+        background-color: #9F9393;
+        display: inline-block;
+        margin: 8px;
+    }
+    #contentButton li.clicked{
+        background-color: #F0F1F3;
+    }  */
 }
-.bread-pic-3{
-    position: absolute;
-    left: 40px;
-    bottom: 0px;
-}
-.bread-pic-4{
-    position: absolute;
-    right: -80px;
-    bottom: -160px;
-}
-.bread-pic-3 img, .bread-pic-4 img{
-    width: 70%;
-}
-.buy h2{
-    font-size: 42px;
-}
+@media screen and (min-width: 769px) {
+    .order-section{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .order-section .pic{
+        width: 52%;
+    }
+    .order-section .lg-pic img:not(:first-child){
+        display: none;
+    }
+    .order-section .sm-pic-list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-top: 1rem;
+    }
+    .sm-pic-list .sm-pic{
+        width: 23%;
+    }
+}  
+@media screen and (min-width: 1024px) {
+    .order-section .sm-pic-list{
+        padding-top: 1.25rem;
+    }
+}  
+
 .tag span{    
     display: inline-block;
     color: #60222B;
     border: 2px solid ;
+    margin-top: 1rem;
 }
-
 .buy p{
-    margin: 10px 0 35px 0;
+    margin: .75rem 0 2rem 0;
 }
 .buy .price-amount{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 0 ;
+    padding: .75rem 0 ;
 }
 .price-amount .price span{
-    font-size: 48px;
+    font-size: 52px;
     font-weight: bold;
     color: #60222B;
     padding: 0;
@@ -99,11 +160,11 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border-radius: 40px;
+    border-radius: 50px;
     background-color: #F0F1F3;
     display: flex;
     width: 50%;
-    padding: 5px 20px;
+    padding: 0.25rem 1.25rem;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -112,7 +173,7 @@ margin: 0;
 }
 .amount input.buy-number{
     font-size: 24px;
-    height: 36px;
+    height: 2.25rem;
     width: 50%;
     text-align: center;
     border: 1px #E6E6E6 solid;
@@ -127,33 +188,55 @@ margin: 0;
     width: 100%;
     font-size: 21px;
     font-weight: bold;  
-    padding:  18px 0;
-    border-radius: 40px;
+    padding:  1rem 0;
+    border-radius: 50px;
     border: 0;
     background-color: #60222B;
     color: #E6E6E6;
 }
+@media screen and (max-width: 768px) {
+    .order-section .buy{
+        width: 100%;
+        padding-top: 3rem;
+    }
+    .buy h2{
+        font-size: 36px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .order-section .buy{
+        width: calc(48% - 3.75rem);
+        margin-left: 3rem;
+        padding-top: 3rem;
+    }
+    .buy h2{
+        font-size: 42px;
+    }  
+}   
+@media screen and (min-width: 1024px) {
+    .order-section .buy{
+        margin-left: 3.75rem;
+        padding-top: 6.25rem;
+    }
+}
+
 
 .discription{
-    margin-top: 96px;
+    width: 100%;
+    margin-top: 6rem;
 }
 .discription .tab-container ul.tab-title{
     display: flex;
     padding-left: 46px;
-    list-style: none;
-}
-.tab-title {
-    margin-bottom: -1px;
-    border-bottom: #60222B 2px solid;
 }
 
+.tab-title {
+    margin-bottom: -1px;
+    border-bottom: #60222B 1.5px solid;
+}
 .tab-container ul label{
-    text-decoration: none;
-    font-size: 24px;
     font-weight: bold;
-    padding: 16px 0;
     text-align: center;
-    width: 200px;
     display: inline-block;
 }
 ul label.tabs-p{
@@ -166,9 +249,6 @@ ul label.tabs-p{
 }
 ul label.tabs-y{
     color: #9F9393;
-}
-.discription .text{
-    padding: 66px 92px 0 92px;
 }
 .text p{
     font-size: 21px;
@@ -204,7 +284,31 @@ ul label.tabs-y{
     border: 0;
     margin-bottom: 0px;
 }
-
 label{
     cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+    .tab-container ul label{
+        font-size: 21px;
+        padding: 0.75rem 0;
+        width: 180px;
+    }
+    .discription .text{
+        padding: 3rem 3rem 0 3rem;
+    }
+}
+@media screen and (min-width: 769px) {
+    .tab-container ul label{
+        font-size: 24px;
+        padding: 1rem 0;
+        width: 200px;
+    }
+    .discription .text{
+        padding: 4rem 4rem 0 4rem;
+    }
+}   
+@media screen and (min-width: 1024px) {
+    .discription .text{
+        padding: 4rem 6rem 0 6rem;
+    }
 }
