--- a/CSS/productsdetail-style.css
+++ b/CSS/productsdetail-style.css
@@ -38,17 +38,19 @@
     .order-section .sm-pic-list{
         display: none;
     }
-    /* .lg-pic {
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        width: 60%;
-        height: 600px;
-        margin: 100px auto;
-        
-        overflow: hidden; 
+    .order-section .sm-pic-list{
+        display: none;
+    }
+    .lg-pic {
+        border-radius: 40px;
+        aspect-ratio: 1/1;
+        width: 100%;
+        margin: auto;
+        overflow: hidden;
     }
     
     .lg-pic #lg-pic-list {
+
         position: relative;
     }
     
@@ -57,23 +59,22 @@
     }
     
     .lg-pic #lg-pic-list img {
+        aspect-ratio: 1/1;
         width: 100%;
-        height: 550px;
-
-    } */
+    } 
     
-/* 
+
     span#pic-number{
         position: absolute;
-        right: 4rem;
-        bottom: 2rem;
+        right: 8rem;
+        top: 36rem;
         background-color: #9F9393;
         font-size: 18px;
         font-weight: bold;
         color: #F0F1F3;
         padding: 0.5rem 1rem;
         border-radius: 50px;
-    }
+    }/* 
     .move-icon{
         position: relative;
         width: 100%;
@@ -86,10 +87,11 @@
     a#next{
         position: absolute;
         right: 0rem;
-    }
+    }*/
     #contentButton{
         position: absolute;
-        bottom: 0;
+        top: 36rem;
+        left: 0;
         text-align: center;
         height: 3rem;
         width: 100%;
@@ -105,7 +107,10 @@
     }
     #contentButton li.clicked{
         background-color: #F0F1F3;
-    }  */
+    }  
+    .order-section .pic>img{
+        display: none;
+    }
 }
 @media screen and (min-width: 769px) {
     .order-section{
@@ -115,7 +120,7 @@
     .order-section .pic{
         width: 52%;
     }
-    .order-section .lg-pic img:not(:first-child){
+    .order-section .lg-pic{
         display: none;
     }
     .order-section .sm-pic-list{
