--- a/CSS/about-style.css
+++ b/CSS/about-style.css
@@ -43,10 +43,39 @@
     background-repeat: no-repeat, no-repeat, no-repeat ,no-repeat;
     background-position:
     top right 4rem,
-    top 35% left,
+    top 33% left,
     bottom 30% right ,
     bottom 30px left 10px;
     background-size: 20%;
+}
+@media screen and (min-width: 360px) {
+    .illus{
+        background-position:
+        top right 4rem,
+        top 33% left,
+        bottom 28% right ,
+        bottom 30px left 10px;
+    }
+}
+@media screen and (min-width: 576px) {
+}
+@media screen and (min-width: 768px) {
+    .illus{
+        background-position:
+        top right 3rem,
+        top 50% left,
+        bottom 20% right ,
+        bottom 15px left 10px;
+    }
+}  
+@media screen and (min-width: 1024px) {
+    .illus{
+        background-position:
+        top right 3rem,
+        top 50% left,
+        bottom 0 right ,
+        bottom 15px left 10px;
+    }
 }
 
 .item{
@@ -55,16 +84,24 @@
     width: 100%;
     position: relative;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
+    .item{
+        flex-direction: column;
+        align-content: center;
+        padding-bottom: 3rem;
+    }
+}
+@media screen and (min-width: 576px) {
     .item{
         flex-direction: column;
         align-content: center;
         padding: 4rem 0;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .item{
-        padding: 1.75rem 0;
+        padding: 3rem 0;
+        flex-direction: row;
     }
 }   
 
@@ -76,27 +113,35 @@
 img.left-top, img.right-bottom{
     position: absolute;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
+    .first-pic img.left-top{
+        width: 27%;
+        left: -30px;
+        top: 30px;
+    }
+    .first-pic img.right-bottom{
+        width: 50%;
+        right: -30px;
+        bottom: 80px;
+    }
+}
+@media screen and (min-width: 576px) {
     .first-pic img.left-top{
         width: 25%;
-        left: -40px;
         top: 100px;
     }
     .first-pic img.right-bottom{
         width: 40%;
-        right: -40px;
-        bottom: 0px;
+        bottom: 50px;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .first-pic img.left-top{
-        width: 28%;
-        left: -30px;
+        width: 25%;
         top: 100px;
     }
     .first-pic img.right-bottom{
         width: 35%;
-        right: -30px;
         bottom: 0px;
     }
 }   
@@ -124,30 +169,39 @@ p{
 .first-text p{
     padding: 1.5rem 0;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
     .first-text{
-        width: 60%;
+        width: 75%;
+        margin-bottom: 10rem;
+    }
+    .first-text h2{
+        font-size: 27px;
+        margin-bottom: 3rem;
+    }
+}
+@media screen and (min-width: 576px) {
+    .first-text{
+        width: 65%;
         margin-bottom: 10rem;
     }
     .first-text h2{
         font-size: 32px;
         margin-bottom: 4rem;
-
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .first-text{
-        width: 50%;
+        width: 55%;
         margin-bottom: 10rem;
     }
     .first-text h2{
         font-size: 36px;
-        margin-bottom: 5rem;
+        margin-bottom: 3rem;
     }
 }   
 @media screen and (min-width: 1024px) {
     .first-text{
-        width: 42%;
+        width: 45%;
         margin-bottom: 15rem;
     }
     .first-text h2{
@@ -156,7 +210,7 @@ p{
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
     p.third-text,.second-text p{
         padding: 0.75rem 0;
     }
@@ -168,17 +222,20 @@ p{
     .item:last-child >.pic{
         order: -1;
     }
-    
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 576px) {
+}
+@media screen and (min-width: 768px) {
     .second-text{
-        width: 45%;
+        width: 55%;
         display: flex;
         flex-wrap: wrap;
-        padding-left: 2rem;
     }
     .second-text p{
-        padding: 1rem 0;
+        padding: 0 1rem 0 3rem;
+    }
+    .pic{
+        margin: 0;
     }
     .item:nth-child(3) >.pic{
         width: 40%;
@@ -186,24 +243,32 @@ p{
         margin-bottom: auto;
     }
     p.third-text{
-        width: 40%;
+        width: 42%;
         margin-top: auto;
         margin-bottom: auto;
-        padding: 0 0px 0 2rem;
+        padding: 0 2rem;
     }
     .item:last-child >.pic{
-        margin-left: auto;
-        width: 48%;
+        width: 44%;
+        order: 1;
     }
 }   
 @media screen and (min-width: 1024px) {
     .second-text{
-        width: 40%;
-        padding-left: 3.75rem;
+        width: 55%;
+    }
+    .second-text p{
+        padding: 0 4rem 0 3rem;
+    }
+    .item:nth-child(3) >.pic{
+        width: 45%;
     }
     p.third-text{
-        width: 35%;
-        padding: 0 0px 0 6.25rem;
+        width: 44%;
+        padding: 0 3rem 0 4rem;
+    }
+    .item:last-child >.pic{
+        width: 42%;
     }
 }
 
